# shux

./: .gitattributes  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  THIRD-PARTY-NOTICES  clippy.toml  codecov.yml  deny.toml  install.sh  lefthook.yml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: shux-tui-qa.md  shux-vt-solid-qa.md
.claude/automations/: _shux_iterm.py  multi_agent_shoot.sh  pixel_verify.py  raster_drive_vivecaka.sh  test_010_tui_client.py  test_011_cli_styling.py  test_012_m0_integration.py  test_013_session_crud.py  test_014_version_handshake.py  test_014_window_crud.py  test_015_pane_ops.py  test_017_attach_multipane.py  test_017_full_verify.py  test_017_real_apps.py  test_017_starship.py  test_017_statusbar_custom.py  test_017_statusbar_segments.py  test_021_copy_mode.py  test_024_theme_engine.py  test_030_apply.py  test_033_help_overlay.py  test_036_events_watch.py  test_060_rich_cli_output.py  test_bare_alt_tier1_keys.py  test_kill_pane_cascade_all_shortcuts.py  test_oob_statusbar.py  test_pr2c_pane_output.py  test_pr3b_optimistic_concurrency.py  test_pr4_pane_titles.py  test_shux_visual.py  test_vivecaka_in_shux.py
.claude/templates/: vivecaka.toml
.codex/agents/: shux-tui-qa.toml  shux-vt-solid-qa.toml
.config/: nextest.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
.shux/: .gitignore
.shux/fixtures/lens/t/demo-app/: Cargo.toml
.shux/fixtures/lens/t/demo-app/src/: main.rs
.shux/qa/: README.md
.shux/scripts/: agent_review_guard.sh  agent_review_guard_selftest.sh  conductor_v0.1_shoot.sh  conductor_v0.2_shoot.sh  conductor_v0.3_shoot.sh  dec_special_graphics_check.sh  dirty_region_check.sh  grapheme_check.sh  grapheme_perf_check.sh  human_copy_mode_check.sh  human_keybindings_check.sh  human_session_persistence_check.sh  integration.sh  issue_63_render_matrix.sh  issue_69_attach_color_check.sh  issue_70_lossless_record_check.sh  laghudarshi_gate_agent.sh  laghudarshi_gate_all.sh  laghudarshi_gate_gauntlet.sh  leak_guard_selftest.sh  no_leak_guard.sh  og_card_render.sh  origin_mode_check.sh  plugin_hot_reload_shoot.sh  plugin_permissions_shoot.sh  resize_reflow_check.sh  sightline_check.sh  smoke.sh  tab_stops_check.sh  three_agent_split_shoot.sh  vt_corpus_check.sh  vt_corpus_promote.sh  vt_corpus_record.sh  wide_invariants_check.sh  xterm256_rich_tui_check.sh
.shux/templates/: three-agents.toml
crates/shux/: Cargo.toml  build.rs
crates/shux-core/: Cargo.toml
crates/shux-core/src/: apply.rs  bus.rs  config.rs  daemon.rs  event.rs  graph.rs  layout.rs  lib.rs  model.rs  theme.rs
crates/shux-plugin/: Cargo.toml
crates/shux-plugin/src/: audit.rs  grants.rs  lib.rs  permissions.rs
crates/shux-plugin/tests/: permissions.rs  plugin_lifecycle.rs
crates/shux-pty/: Cargo.toml
crates/shux-pty/src/: capture.rs  command.rs  handle.rs  lib.rs  manager.rs
crates/shux-pty/tests/: integration.rs
crates/shux-raster/: Cargo.toml  REGENERATE_SYMBOLS_SUBSET.md
crates/shux-raster/assets/: NOTICE.md
crates/shux-raster/examples/: dirty_region_harness.rs  hello_pixel.rs  vt_corpus_harness.rs
crates/shux-raster/src/: gate_pixel.rs  lib.rs
crates/shux-rpc/: Cargo.toml
crates/shux-rpc/src/: attach.rs  caller.rs  codec.rs  error.rs  lib.rs  policy.rs  router.rs  server.rs
crates/shux-ui/: Cargo.toml
crates/shux-ui/examples/: terminal_demo.rs
crates/shux-ui/src/: attach.rs  borders.rs  buffer.rs  client.rs  composed.rs  compositor.rs  copy_mode.rs  help_overlay.rs  input.rs  keybinding.rs  keys.rs  lib.rs  render.rs  statusbar.rs  terminal.rs  vt_convert.rs
crates/shux-ui/tests/: compositor_tests.rs
crates/shux-vt/: Cargo.toml
crates/shux-vt/examples/: grapheme_perf.rs
crates/shux-vt/src/: capture.rs  cast.rs  cell.rs  charset.rs  cursor.rs  diff.rs  gate.rs  gate_compare.rs  grid.rs  lib.rs  parser.rs  settle.rs  tabstops.rs
crates/shux-vt/tests/: vt_corpus_replay.rs  wide_invariants.rs
crates/shux/src/: attach.rs  cli.rs  client.rs  config_validate.rs  daemon.rs  lens_scratch.rs  main.rs  onboarding.rs  session_meta.rs  session_persist.rs  statusbar_build.rs  statusbar_runner.rs  style.rs  template.rs
crates/shux/src/features/plugin/: mod.rs  package.rs  scaffold.rs
crates/shux/src/gate/: bless.rs  compare.rs  driver.rs  env_plan.rs  heat.rs  init.rs  keys.rs  mod.rs  outcome.rs  queries.rs  review.rs  runner.rs  scenario.rs  secrets.rs  signal.rs  summary.rs  verdict.rs
crates/shux/tests/: checkpoint_invalidation_gating.rs  cli_integration.rs  daemon_lifecycle_integration.rs  diff_concurrent_readers.rs  diff_default_colors.rs  diff_heat_budget.rs  diff_palette_isolation.rs  lens_diff.rs  lens_fixtures_smoke.rs  lens_gate_bench.rs  lens_gate_capture.rs  lens_gate_compare.rs  lens_gate_contract.rs  lens_gate_divergence.rs  lens_gate_exit_contract.rs  lens_gate_glance_cells.rs  lens_gate_parity.rs  lens_gate_run.rs  lens_gate_settle.rs  lens_gate_verdict.rs  lens_glance.rs  lens_loop.rs  lens_revision.rs  lens_run.rs  lens_settle.rs  lens_settle_hardening.rs  lens_ttier.rs  m0_integration.rs  pane_io_integration.rs  scratch_reap_order.rs  settle_waiter_drop.rs
crates/shux/tests/lens_common/: mod.rs
docs/: PR2c-DESIGN.md  PRD.md  PROGRESS.md  agents.md  architecture.md  configuration.md  development.md  roadmap.md  users.md
docs/agents/: api-notes.md  learnings.md  releases.md  visual-testing.md
docs/spikes/: 067-libghostty-vt-eval.md
docs/tasks/: 000-repository-scaffold-and-tooling.md  (+87 more)
pages/: _headers  _redirects  diag.html  index.html  og-card.html
scripts/: bench-baseline.sh  build-release.sh  check-exec-ready.sh  check-gate-docs.sh  check-lens-frozen.sh  check-progress.sh  check-skill-docs.sh  check-tui-qa.sh  check-vt-fixtures.sh  run-cargo-test.sh  run-tasks.sh  set-version.sh  setup-dev.sh
spikes/libghostty-vt-eval/: Cargo.toml
spikes/libghostty-vt-eval/scripts/: record-rich-tuis.sh  zig-macos-target-wrapper.sh
spikes/libghostty-vt-eval/src/: lib.rs
(+392 files in other folders)
