[workspace]
resolver = "2"
members = [
    "crates/shux",
    "crates/shux-core",
    "crates/shux-pty",
    "crates/shux-vt",
    "crates/shux-rpc",
    "crates/shux-plugin",
    "crates/shux-ui",
    "crates/shux-raster",
]

[workspace.package]
version = "0.31.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/indrasvat/shux"
authors = ["indrasvat"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Terminal
crossterm = "0.29"
ratatui = "0.30"

# VT parsing
vte = { version = "0.15", features = ["ansi"] }

# Plugin (Wasm)
wasmtime = "41"
wasmtime-wasi = "41"

# State
arc-swap = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JSON-RPC types
json-rpc-types = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# gRPC (optional, for M2)
tonic = "0.12"
prost = "0.13"

# Daemonization
nix = { version = "0.29", features = ["process", "signal", "fs", "user", "term"] }

# Filesystem watching (for config hot reload)
notify = "8"

# Timestamps for the plugin audit log
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Params hash for the plugin audit log
sha2 = "0.10"
