[package]
name = "shux-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
