[package]
name = "shux-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shux-core = { path = "../shux-core" }
shux-rpc = { path = "../shux-rpc" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
