[package]
name = "shux-raster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Crate code is MIT (workspace). The bundled font asset
# `assets/JetBrainsMonoNerdFontMono-Regular.ttf` is the upstream Nerd Fonts
# patched build of JetBrains Mono, licensed under the SIL Open Font License
# 1.1 (see `assets/OFL.txt`). Downstream packagers should treat the binary
# distribution as a derived work under both licenses.
license = "MIT AND OFL-1.1"
description = "Pure-Rust cell-grid rasterizer — turns a shux-vt Grid<Cell> into a PNG without a terminal emulator."

[dependencies]
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
shux-vt = { path = "../shux-vt" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
