[package]
name = "shux-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shux-core = { path = "../shux-core" }
shux-rpc = { path = "../shux-rpc" }
shux-vt = { path = "../shux-vt" }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
unicode-width = "0.2"
base64 = "0.22"
bytes = "1"
futures = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
