[package]
name = "shux-vt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vte = { workspace = true }
unicode-width = "0.2"
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Lens-gate golden content hashing (task 080): capture_sha256 / mask_hash. The gate
# vocabulary already lives here (gate.rs), so the cell-tier compare + fingerprint
# struct that the frozen contract tests import stay in the lowest shared crate.
sha2 = { workspace = true }

[dev-dependencies]
proptest = "1"
