[package]
name = "shux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A modern, batteries-included terminal multiplexer"
default-run = "shux"

[[bin]]
name = "shux"
path = "src/main.rs"

[dependencies]
shux-core = { path = "../shux-core" }
shux-pty = { path = "../shux-pty" }
shux-vt = { path = "../shux-vt" }
shux-rpc = { path = "../shux-rpc" }
shux-plugin = { path = "../shux-plugin" }
shux-ui = { path = "../shux-ui" }
shux-raster = { path = "../shux-raster" }
crossterm.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
nix.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
unicode-width = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
arc-swap = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
