[package]
name = "shux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A modern, batteries-included terminal multiplexer"
default-run = "shux"

[[bin]]
name = "shux"
path = "src/main.rs"

[dependencies]
shux-core = { path = "../shux-core" }
shux-pty = { path = "../shux-pty" }
shux-vt = { path = "../shux-vt" }
shux-rpc = { path = "../shux-rpc" }
shux-plugin = { path = "../shux-plugin" }
shux-ui = { path = "../shux-ui" }
shux-raster = { path = "../shux-raster" }
crossterm.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
nix.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
unicode-width = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
arc-swap = { workspace = true }
sha2 = { workspace = true }
# Already in-tree transitively via nix; direct use is the macOS
# proc_pidinfo(PROC_PIDTBSDINFO) start-time read for the lens scratch
# registry (LENS-R-044 "start time matches") — nix has no wrapper for it.
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

# ── lens red suite (§12/§13) — SEPARATE TEST LANE ──────────────────────────
# `test = false` keeps these daemon-backed integration tests out of the default
# `cargo test` / `make test` (so `make check` stays clean while the suite is red
# during P0–P5), while `make test-lens` / `make test-lens-t` run them EXPLICITLY
# via `--test <name>`. This is NOT `#[ignore]`, NOT a cfg feature-gate, and NOT
# a CI exclusion (they run in the dedicated lens CI lane) — see PRD §16.1.
[[test]]
name = "lens_fixtures_smoke"
path = "tests/lens_fixtures_smoke.rs"
test = false

[[test]]
name = "lens_glance"
path = "tests/lens_glance.rs"
test = false

[[test]]
name = "lens_revision"
path = "tests/lens_revision.rs"
test = false

[[test]]
name = "lens_settle"
path = "tests/lens_settle.rs"
test = false

[[test]]
name = "lens_diff"
path = "tests/lens_diff.rs"
test = false

[[test]]
name = "lens_run"
path = "tests/lens_run.rs"
test = false

[[test]]
name = "lens_loop"
path = "tests/lens_loop.rs"
test = false

[[test]]
name = "lens_ttier"
path = "tests/lens_ttier.rs"
test = false

# Lens-gate (task 078) — same `test = false` regime as the lens suite above.
# `lens_gate_capture` is the GREEN dogfood suite (capture on real shux TUIs +
# cross-path PNG); `lens_gate_contract` is the FROZEN RED contract lane, run
# only via `make test-lens-gate-contract` and EXPECTED to fail until tasks
# 081/082 retire its cases. Both are frozen paths (GATE-TEST-CHANGE: trailer).
[[test]]
name = "lens_gate_capture"
path = "tests/lens_gate_capture.rs"
test = false

[[test]]
name = "lens_gate_contract"
path = "tests/lens_gate_contract.rs"
test = false

# Task 080 — daemon-backed `pane.glance --cells` emission (L1-capture + L3-dogfood) and
# the capture/compare throughput bench. Same `test = false` regime as the lens suite:
# out of the default `cargo test` / CI parallel run; run EXPLICITLY + serially under the
# leak guard via `make test-lens-gate-glance-cells` / `make bench-lens-gate`.
# (`lens_gate_compare` is a PURE, CI-run test — no entry here, so it auto-discovers.)
[[test]]
name = "lens_gate_glance_cells"
path = "tests/lens_gate_glance_cells.rs"
test = false

[[test]]
name = "lens_gate_bench"
path = "tests/lens_gate_bench.rs"
test = false
